@@ -1,9 +1,11 @@
 package edu.gatech.gtri.obm.translator.alloy;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 import edu.mit.csail.sdg.alloy4.A4Reporter;
-import edu.mit.csail.sdg.alloy4.Pos;
-import edu.mit.csail.sdg.ast.Command;
-import edu.mit.csail.sdg.ast.CommandScope;
 import edu.mit.csail.sdg.ast.Decl;
 import edu.mit.csail.sdg.ast.Expr;
 import edu.mit.csail.sdg.ast.ExprBinary;
@@ -17,105 +19,51 @@ import edu.mit.csail.sdg.ast.Sig;
 import edu.mit.csail.sdg.ast.Sig.Field;
 import edu.mit.csail.sdg.ast.Sig.PrimSig;
 import edu.mit.csail.sdg.parser.CompUtil;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
 
-// TODO: Auto-generated Javadoc
-/** The Class Alloy. */
 public class Alloy {
 
-  /** The occ sig. */
   protected static PrimSig occSig;
-
-  /** The template module. */
   protected static Module templateModule;
-
-  /** The transfer module. */
   public static Module transferModule;
 
-  /** The ignored sigs. */
   protected static Set<Sig> ignoredSigs;
-
-  /** The ignored exprs. */
   protected static Set<Expr> ignoredExprs;
-
-  /** The ignored funcs. */
   protected static Set<Func> ignoredFuncs;
 
-  /** The happens before. */
   public static Func happensBefore;
-
-  /** The happens during. */
   public static Func happensDuring;
 
-  /** The sources. */
   public static Func sources;
-
-  /** The targets. */
   public static Func targets;
-
-  /** The subsetting item rule for sources. */
   public static Func subsettingItemRuleForSources;
-
-  /** The subsetting item rule for targets. */
   public static Func subsettingItemRuleForTargets;
-
-  /** The is after source. */
   public static Func isAfterSource;
-
-  /** The is before target. */
   public static Func isBeforeTarget;
 
-  /** The bijection filtered. */
   protected static Func bijectionFiltered;
-
-  /** The function filtered. */
   protected static Func functionFiltered;
-
-  /** The inverse function filtered. */
   protected static Func inverseFunctionFiltered;
 
-  /** The osteps. */
   protected static Func osteps;
+  public static Func oinputs;
+  public static Func ooutputs;
+  public static Func oitems;
 
-  /** The oinputs. */
-  protected static Func oinputs;
-
-  /** The ooutputs. */
-  protected static Func ooutputs;
-
-  /** The unique fact. */
   protected ExprList uniqueFact;
-
-  /** The template fact. */
   protected Expr templateFact;
-
-  /** The overall fact. */
   protected Expr overallFact;
-
-  /** The all sigs. */
   protected List<Sig> allSigs;
-
-  /** The name expr. */
   protected Expr _nameExpr;
 
-  /** The transfer sig. */
   public static Sig transferSig;
-
-  /** The transfer before sig. */
   public static Sig transferBeforeSig;
 
-  /** The Constant templateString. */
   protected static final String templateString =
       "open Transfer[Occurrence] as o \n" + "abstract sig Occurrence{}";
 
+
   /**
-   * Instantiates a new alloy.
-   *
+   * 
    * @param working_dir where required alloy library defined in templateString is locating.
    */
   public Alloy(String working_dir) {
@@ -138,6 +86,7 @@ public class Alloy {
     for (Expr expr : exprList.args) {
       ignoredExprs.add(expr);
     }
+
 
     // abstract
     occSig = (PrimSig) AlloyUtils.getReachableSig(templateModule, "this/Occurrence");
@@ -165,77 +114,30 @@ public class Alloy {
     isAfterSource = AlloyUtils.getFunction(transferModule, "o/isAfterSource");
     isBeforeTarget = AlloyUtils.getFunction(transferModule, "o/isBeforeTarget");
 
+
     osteps = AlloyUtils.getFunction(transferModule, "o/steps");
     oinputs = AlloyUtils.getFunction(transferModule, "o/inputs");
     ooutputs = AlloyUtils.getFunction(transferModule, "o/outputs");
+    oitems = AlloyUtils.getFunction(transferModule, "o/items");
 
     transferSig = AlloyUtils.getReachableSig(transferModule, "o/Transfer");
     transferBeforeSig = AlloyUtils.getReachableSig(transferModule, "o/TransferBefore");
-
-    // // constraints
-    // Func nonZeroDurationOnlyFunction = Helper.getFunction(transferModule,
-    // "o/nonZeroDurationOnly");
-    // Expr nonZeroDurationOnlyFunctionExpression = nonZeroDurationOnlyFunction.call();
-    //
-    // Sig transfer = Helper.getReachableSig(transferModule, "o/Transfer");
-    // Expr suppressTransfersExpessionBody = transfer.no();
-    // Func suppressTransfersFunction =
-    // new Func(null, "suppressTransfers", null, null, suppressTransfersExpessionBody);
-    // Expr suppressTransfersExpression = suppressTransfersFunction.call();
-    //
-    // Func inputs = Helper.getFunction(transferModule, "o/inputs");
-    // Func outputs = Helper.getFunction(transferModule, "o/outputs");
-    // Expr suppressIOExpressionBody = inputs.call().no().and(outputs.call().no());
-    // Func suppressIOFunction = new Func(null, "suppressIO", null, null, suppressIOExpressionBody);
-    // Expr suppressIOExpression = suppressIOFunction.call();
-    //
-    //
-    // _nameExpr = nonZeroDurationOnlyFunctionExpression.and(suppressTransfersExpression)
-    // .and(suppressIOExpression);
   }
 
-  // public Sig getTransferSig() {
-  // Sig transfer = AlloyUtils.getReachableSig(transferModule, "o/Transfer");
-  // return transfer;
-  // }
-  //
-  // public Sig getTransferBeforeSig() {
-  // Sig transfer = AlloyUtils.getReachableSig(transferModule, "o/TransferBefore");
-  // return transfer;
-  // }
 
-  /**
-   * Gets the transfer module.
-   *
-   * @return the transfer module
-   */
   public Module getTransferModule() {
     return Alloy.transferModule;
   }
 
-  /**
-   * Gets the template module.
-   *
-   * @return the template module
-   */
   public Module getTemplateModule() {
     return Alloy.templateModule;
   }
 
-  /**
-   * Gets the occ sig.
-   *
-   * @return the occ sig
-   */
+
   public PrimSig getOccSig() {
     return Alloy.occSig;
   }
 
-  /**
-   * Gets the over all fact.
-   *
-   * @return the over all fact
-   */
   public Expr getOverAllFact() {
     if (overallFact == null) {
       return templateModule.getAllReachableFacts();
@@ -244,55 +146,24 @@ public class Alloy {
     return this.overallFact.and(templateModule.getAllReachableFacts());
   }
 
-  /**
-   * Gets the all sigs.
-   *
-   * @return the all sigs
-   */
   public List<Sig> getAllSigs() {
     return this.allSigs;
   }
 
-  /**
-   * Creates the sig and add to all sigs.
-   *
-   * @param label the label
-   * @param parent the parent
-   * @return the prim sig
-   */
   public PrimSig createSigAndAddToAllSigs(String label, PrimSig parent) {
-    // Sig s = new PrimSig("this/" + label, parent);
     PrimSig s = new PrimSig(label, parent);
     allSigs.add(s);
     return s;
   }
 
-  /**
-   * Creates the sig as child of occ sig and add to all sigs.
-   *
-   * @param label the label
-   * @return the prim sig
-   */
   public PrimSig createSigAsChildOfOccSigAndAddToAllSigs(String label) {
     return createSigAndAddToAllSigs(label, Alloy.occSig);
   }
 
-  /**
-   * Creates the sig as child of parent sig add to all sigs.
-   *
-   * @param label the label
-   * @param parentSig the parent sig
-   * @return the prim sig
-   */
   public PrimSig createSigAsChildOfParentSigAddToAllSigs(String label, PrimSig parentSig) {
     return createSigAndAddToAllSigs(label, parentSig);
   }
 
-  /**
-   * Adds the to overall fact.
-   *
-   * @param expr the expr
-   */
   public void addToOverallFact(Expr expr) {
     if (overallFact == null) {
       overallFact = expr;
@@ -301,29 +172,17 @@ public class Alloy {
     }
   }
 
-  /**
-   * Gets the ignored sigs.
-   *
-   * @return the ignored sigs
-   */
+
   public Set<Sig> getIgnoredSigs() {
     return ignoredSigs;
   }
 
-  /**
-   * Gets the ignored exprs.
-   *
-   * @return the ignored exprs
-   */
+
   public Set<Expr> getIgnoredExprs() {
     return ignoredExprs;
   }
 
-  /**
-   * Gets the ignored funcs.
-   *
-   * @return the ignored funcs
-   */
+
   public Set<Func> getIgnoredFuncs() {
     return ignoredFuncs;
   }
@@ -332,40 +191,32 @@ public class Alloy {
    * support when Expr original is ExprBinary(ie., p1 + p2) to add ExprVar s in both so returns s.p1
    * and s.p2. if original is like "BuffetService <: (FoodService <: eat)" -> ((ExprBinary)
    * original).op = "<:", in this case just return s.join(original) =
-   *
-   * @param s the s
-   * @param original the original
-   * @return the expr
+   * 
+   * @param s
+   * @param original
+   * @return
    */
   private Expr addExprVarToExpr(ExprVar s, Expr original) {
     if (original instanceof ExprBinary) {
       Expr left = addExprVarToExpr(s, ((ExprBinary) original).left);
       Expr right = addExprVarToExpr(s, ((ExprBinary) original).right);
-      if (((ExprBinary) original).op == ExprBinary.Op.PLUS) return left.plus(right);
-      else return s.join(original); // x . BuffetService <: (FoodService <: eat) where original =
-      // "BuffetService <: (FoodService <: eat)" with ((ExprBinary)
-      // original).op = "<:"
+      if (((ExprBinary) original).op == ExprBinary.Op.PLUS)
+        return left.plus(right);
+      else
+        return s.join(original); // x . BuffetService <: (FoodService <: eat) where original =
+                                 // "BuffetService <: (FoodService <: eat)" with ((ExprBinary)
+                                 // original).op = "<:"
     } else {
       return s.join(original); // x.BuffetService
     }
   }
 
-  /**
-   * Creates the inverse function filtered happens before and add to overall fact.
-   *
-   * @param ownerSig the owner sig
-   * @param from the from
-   * @param to the to
-   */
-  public void createInverseFunctionFilteredHappensBeforeAndAddToOverallFact(
-      Sig ownerSig, Expr from, Expr to) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
-    Expr inverseFunctionFilteredExpr =
-        inverseFunctionFiltered.call(
-            happensBefore.call(), addExprVarToExpr(s, from), addExprVarToExpr(s, to));
-
-    List<ExprHasName> names = new ArrayList<>(List.of(s));
-    Decl decl = new Decl(null, null, null, names, ownerSig.oneOf());
+  public void createInverseFunctionFilteredHappensBeforeAndAddToOverallFact(Sig ownerSig, Expr from,
+      Expr to) {
+    ExprVar varX = makeVarX(ownerSig);
+    Decl decl = makeDecl(varX, ownerSig);
+    Expr inverseFunctionFilteredExpr = inverseFunctionFiltered.call(happensBefore.call(),
+        addExprVarToExpr(varX, from), addExprVarToExpr(varX, to));
     this.addToOverallFact(inverseFunctionFilteredExpr.forAll(decl));
   }
 
@@ -373,77 +224,64 @@ public class Alloy {
    * Creates a inverseFunctionFiltered fact with happensBefore. Use when "from" or "to" has a +
    * sign. fact f3 {all s: Loop | functionFiltered[happensBefore, s.p2, s.p2 + s.p3]} ownerSig=Loop;
    * from={p2}; to={p2, p3}
-   *
-   * <p>In this example, "to" has a + sign.
-   *
-   * @param ownerSig the owner sig
-   * @param from the from
-   * @param to the to
+   * 
+   * In this example, "to" has a + sign.
    */
-  public void createInverseFunctionFilteredHappensBeforeAndAddToOverallFact(
-      Sig ownerSig, Expr[] from, Expr[] to) {
+  public void createInverseFunctionFilteredHappensBeforeAndAddToOverallFact(Sig ownerSig,
+      Expr[] from, Expr[] to) {
 
     assert from.length > 0 : "error: from.length must be greater than 0";
     assert to.length > 0 : "error: to.length must be greater than 0";
 
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
-    Expr _from = s.join(from[0]), _to = s.join(to[0]);
+    ExprVar varX = makeVarX(ownerSig);
+    Decl decl = makeDecl(varX, ownerSig);
+
+    Expr _from = varX.join(from[0]), _to = varX.join(to[0]);
 
     for (int i = 1; i < from.length; i++) {
-      _from = _from.plus(s.join(from[i]));
+      _from = _from.plus(varX.join(from[i]));
     }
     for (int i = 1; i < to.length; i++) {
-      _to = _to.plus(s.join(to[i]));
+      _to = _to.plus(varX.join(to[i]));
     }
 
     Expr inverseFunctionFilteredExpression =
         inverseFunctionFiltered.call(happensBefore.call(), _from, _to);
 
-    List<ExprHasName> names = List.of(s);
-    Decl decl = new Decl(null, null, null, names, ownerSig.oneOf());
+
     addToOverallFact(inverseFunctionFilteredExpression.forAll(decl));
   }
 
   /**
    * Creates a functionFiltered fact. Example Alloy fact: fact f1 { all s: Loop |
    * functionFiltered[happensBefore, s.p1, s.p2] } ownerSig = Loop, from = p1, to = p2
-   *
-   * <p>This function doesn't handle the case where "from" or "to" has a plus sign in it. Example
-   * Alloy fact this function can't create: fact f3 {all s: Loop | functionFiltered[happensBefore,
-   * s.p2, s.p2 + s.p3]}
-   *
-   * <p>I wrote another function below to handle this case with + sign.
+   * 
+   * This function doesn't handle the case where "from" or "to" has a plus sign in it. Example Alloy
+   * fact this function can't create: fact f3 {all s: Loop | functionFiltered[happensBefore, s.p2,
+   * s.p2 + s.p3]}
+   * 
+   * I wrote another function below to handle this case with + sign.
    * createFunctionFilteredHappensBeforeAndAllToOverAllFact( Sig ownerSig, Expr[] from, Expr[] to)
-   *
-   * @param ownerSig the owner sig
-   * @param from the from
-   * @param to the to
    */
-  public void createFunctionFilteredHappensBeforeAndAddToOverallFact(
-      Sig ownerSig, Expr from, Expr to) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
-
-    Expr funcFilteredExpr =
-        functionFiltered.call(
-            happensBefore.call(), addExprVarToExpr(s, from), addExprVarToExpr(s, to));
-    List<ExprHasName> names = new ArrayList<>(List.of(s));
-    Decl decl = new Decl(null, null, null, names, ownerSig.oneOf());
+  public void createFunctionFilteredHappensBeforeAndAddToOverallFact(Sig ownerSig, Expr from,
+      Expr to) {
+    ExprVar varX = makeVarX(ownerSig);
+    Decl decl = makeDecl(varX, ownerSig);
+    Expr funcFilteredExpr = functionFiltered.call(happensBefore.call(),
+        addExprVarToExpr(varX, from), addExprVarToExpr(varX, to));
     this.addToOverallFact(funcFilteredExpr.forAll(decl));
   }
+
 
   /**
    * Creates a functionFiltered fact with happensBefore. Use when "from" or "to" has a + sign. fact
    * f3 {all s: Loop | functionFiltered[happensBefore, s.p2, s.p2 + s.p3]} ownerSig=Loop; from={p2};
    * to={p2, p3}
-   *
-   * <p>In this example, "to" has a + sign.
-   *
-   * @param ownerSig the owner sig
-   * @param from the from
-   * @param to the to
+   * 
+   * In this example, "to" has a + sign.
    */
-  public void createFunctionFilteredHappensBeforeAndAddToOverallFact(
-      Sig ownerSig, Expr[] from, Expr[] to) {
+  public void createFunctionFilteredHappensBeforeAndAddToOverallFact(Sig ownerSig, Expr[] from,
+      Expr[] to) {
 
     assert from.length > 0 : "error: from.length must be greater than 0";
     assert to.length > 0 : "error: to.length must be greater than 0";
@@ -465,37 +303,21 @@ public class Alloy {
   }
 
   /**
-   * Creates the bijection filtered happens before and add to overall fact.
-   *
-   * @param ownerSig the owner sig
-   * @param from the from
-   * @param to the to
-   */
-  public void createBijectionFilteredHappensBeforeAndAddToOverallFact(
-      Sig ownerSig, Expr from, Expr to) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
-
-    Expr bijectionFilteredExpr =
-        bijectionFiltered.call(
-            happensBefore.call(), addExprVarToExpr(s, from), addExprVarToExpr(s, to));
-
-    List<ExprHasName> names = new ArrayList<>(List.of(s));
-    Decl decl = new Decl(null, null, null, names, ownerSig.oneOf());
-    this.addToOverallFact(bijectionFilteredExpr.forAll(decl));
-  }
-
-  /**
    * Creates the sub setting item rule overall fact.
    *
    * @param ownerSig the owner sig
    * @param transfer the transfer
    */
-  // transfer = x.tarnsferSupplierCustomer
-  public void createSubSettingItemRuleOverallFact(Sig ownerSig, Expr transfer) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
-    Decl decl = new Decl(null, null, null, List.of(s), ownerSig.oneOf());
-    this.addToOverallFact(subsettingItemRuleForSources.call(s.join(transfer)).forAll(decl));
-    this.addToOverallFact(subsettingItemRuleForTargets.call(s.join(transfer)).forAll(decl));
+  public Set<Expr> createSubSettingItemRuleOverallFact(Sig ownerSig, Expr transfer) {
+    Set<Expr> factsAdded = new HashSet<>();
+    ExprVar varX = makeVarX(ownerSig);
+    Decl decl = makeDecl(varX, ownerSig);
+    this.addToOverallFact(subsettingItemRuleForSources.call(varX.join(transfer)).forAll(decl));
+    this.addToOverallFact(subsettingItemRuleForTargets.call(varX.join(transfer)).forAll(decl));
+
+    factsAdded.add(subsettingItemRuleForSources.call(varX.join(transfer)));
+    factsAdded.add(subsettingItemRuleForTargets.call(varX.join(transfer)));
+    return factsAdded;
   }
 
   /**
@@ -504,55 +326,62 @@ public class Alloy {
    * @param ownerSig the owner sig
    * @param transfer the transfer
    */
-  public void createIsAfterSourceIsBeforeTargetOverallFact(Sig ownerSig, Expr transfer) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
-    Decl decl = new Decl(null, null, null, List.of(s), ownerSig.oneOf());
-    this.addToOverallFact(isAfterSource.call(s.join(transfer)).forAll(decl));
-    this.addToOverallFact(isBeforeTarget.call(s.join(transfer)).forAll(decl));
+  public Set<Expr> createIsAfterSourceIsBeforeTargetOverallFact(Sig ownerSig, Expr transfer) {
+
+    Set<Expr> factsAdded = new HashSet<>();
+    ExprVar varX = makeVarX(ownerSig);
+    Decl decl = makeDecl(varX, ownerSig);
+    this.addToOverallFact(isAfterSource.call(varX.join(transfer)).forAll(decl));
+    this.addToOverallFact(isBeforeTarget.call(varX.join(transfer)).forAll(decl));
+    factsAdded.add(isAfterSource.call(varX.join(transfer)));
+    factsAdded.add(isBeforeTarget.call(varX.join(transfer)));
+    return factsAdded;
+
   }
 
-  /**
-   * Creates the is after source overall fact.
-   *
-   * @param ownerSig the owner sig
-   * @param transfer the transfer
-   */
-  public void createIsAfterSourceOverallFact(Sig ownerSig, Expr transfer) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
-    Decl decl = new Decl(null, null, null, List.of(s), ownerSig.oneOf());
-    this.addToOverallFact(isAfterSource.call(s.join(transfer)).forAll(decl));
+
+  public void addFacts(Sig ownerSig, Set<Expr> facts) {
+    Decl decl = makeDecl(makeVarX(ownerSig), ownerSig);
+    for (Expr fact : facts)
+      this.addToOverallFact(fact.forAll(decl));
   }
 
-  /**
-   * Creates the is before target overall fact.
-   *
-   * @param ownerSig the owner sig
-   * @param transfer the transfer
-   */
-  public void createIsBeforeTargetOverallFact(Sig ownerSig, Expr transfer) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
-    Decl decl = new Decl(null, null, null, List.of(s), ownerSig.oneOf());
-    this.addToOverallFact(isBeforeTarget.call(s.join(transfer)).forAll(decl));
-  }
+  // fact {all x: OFSingleFoodService | x.transferOrderPay.sources.orderedFoodItem +
+  // x.transferOrderPay.sources.orderAmount in x.transferOrderPay.items}
+  // fact {all x: OFSingleFoodService | x.transferOrderPay.items in
+  // x.transferOrderPay.sources.orderedFoodItem + x.transferOrderPay.sources.orderAmount}
+  public Set<Expr> createTransferInItems(Sig ownerSig, Expr transfer, Expr toField, Func func,
+      Set<Field> targetInputsSourceOutputsFields, boolean toBeInherited) {
+    ExprVar varX = makeVarX(ownerSig);
+    Decl decl = makeDecl(varX, ownerSig);
+    Expr funcCall = func.call();
 
-  /**
-   * Creates the inverse function filtered and add to overall fact.
-   *
-   * @param ownerSig the owner sig
-   * @param from the from
-   * @param to the to
-   * @param func the func
-   */
-  public void createInverseFunctionFilteredAndAddToOverallFact(
-      Sig ownerSig, Expr from, Expr to, Func func) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
+    List<Field> sortedTargetInputsSourceOutputsFields =
+        AlloyUtils.sortFields(targetInputsSourceOutputsFields);
+    Expr all = null, all_r = null;
+    for (Field field : sortedTargetInputsSourceOutputsFields) {
+      all = all == null ? varX.join(transfer).join(funcCall).join(field)
+          : all.plus(varX.join(transfer).join(funcCall).join(field));
+    }
+    // all = x.transferOrderPay.sources.orderedFoodItem + x.transferOrderPay.sources.orderAmount
 
-    Expr funcFilteredExpr =
-        inverseFunctionFiltered.call(
-            func.call(), addExprVarToExpr(s, from), addExprVarToExpr(s, to));
-    List<ExprHasName> names = new ArrayList<>(List.of(s));
-    Decl decl = new Decl(null, null, null, names, ownerSig.oneOf());
-    this.addToOverallFact(funcFilteredExpr.forAll(decl));
+    // x.transferOrderPay.items in
+    // x.transferOrderPay.sources.orderedFoodItem + x.transferOrderPay.sources.orderAmount
+    all_r = varX.join(transfer).join(Alloy.oitems.call()).in(all);
+
+    // x.transferOrderPay.sources.orderedFoodItem + x.transferOrderPay.sources.orderAmount in
+    // x.transferOrderPay.items
+    all = all.in(varX.join(transfer).join(Alloy.oitems.call()));
+
+    if (!toBeInherited) {
+      this.addToOverallFact(all.forAll(decl));
+      this.addToOverallFact(all_r.forAll(decl));
+    }
+
+    Set<Expr> factsAdded = new HashSet<>();
+    factsAdded.add(all);
+    factsAdded.add(all_r);
+    return factsAdded;
   }
 
   /**
@@ -563,85 +392,70 @@ public class Alloy {
    * @param to the to
    * @param func the func
    */
-  /* if from or to is null, use ExprVar x */
-  public void createFunctionFilteredAndAddToOverallFact(
-      Sig ownerSig, Expr from, Expr to, Func func) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
+  // fact {all x: OFSingleFoodService | bijectionFiltered[sources, x.transferOrderPay, x.order]}
+  public Set<Expr> createBijectionFilteredToOverallFact(Sig ownerSig, Expr from, Expr to,
+      Func func) {
 
-    to = to == null ? s : to;
-    from = from == null ? s : from;
+    Set<Expr> factsAdded = new HashSet<>();
 
-    Expr funcFilteredExpr =
-        functionFiltered.call(func.call(), addExprVarToExpr(s, from), addExprVarToExpr(s, to));
-    List<ExprHasName> names = new ArrayList<>(List.of(s));
-    Decl decl = new Decl(null, null, null, names, ownerSig.oneOf());
-    this.addToOverallFact(funcFilteredExpr.forAll(decl));
-  }
+    ExprVar varX = makeVarX(ownerSig);
+    Decl decl = makeDecl(varX, ownerSig);
 
-  /**
-   * Creates the bijection filtered to overall fact.
-   *
-   * @param ownerSig the owner sig
-   * @param from the from
-   * @param to the to
-   * @param func the func
-   */
-  /* if from or to is null, use ExprVar x */
-  public void createBijectionFilteredToOverallFact(Sig ownerSig, Expr from, Expr to, Func func) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
     Expr fromExpr = null;
     Expr toExpr = null;
 
     boolean justFunction = false;
-    boolean justInverseFunction = false;
-    if (to == null) { // just x - means no field but to itself
-      // i.e., fact {all x: B | bijectionFiltered[sources, x.transferB1B2, x.b1]} in
-      // 4.1.4 Transfer Parameter2 -Parameter Behavior.als
+    if (to == null) {// just x - means no field but to itself
+                     // i.e., fact {all x: B | bijectionFiltered[sources, x.transferB1B2, x.b1]} in
+                     // 4.1.4 Transfer Parameter2 -Parameter Behavior.als
       justFunction = true;
-      toExpr = s;
-    } else toExpr = addExprVarToExpr(s, to);
-    if (from == null) { // just x - means no field but to itself
-      justInverseFunction = true;
-      fromExpr = s;
-    } else fromExpr = addExprVarToExpr(s, from);
-
-    Expr funcCall = func.call();
-
-    Expr fnc_inversefnc_or_bijection = null;
-    if (!justFunction && !justInverseFunction) {
-      fnc_inversefnc_or_bijection = bijectionFiltered.call(funcCall, fromExpr, toExpr);
-    } else if (justFunction) {
-      fnc_inversefnc_or_bijection = functionFiltered.call(funcCall, fromExpr, toExpr);
-    } else if (justInverseFunction) {
-      fnc_inversefnc_or_bijection = inverseFunctionFiltered.call(funcCall, fromExpr, toExpr);
+      toExpr = varX;
+    } else {
+      // fact {all x: MultipleObjectFlow | bijectionFiltered[outputs, x.p1, x.p1.i]}
+      toExpr = addExprVarToExpr(varX, to);
     }
+    if (from == null) {// just x - means no field but to itself
+      fromExpr = varX;
+    } else
+      fromExpr = addExprVarToExpr(varX, from);
 
-    List<ExprHasName> names = new ArrayList<>(List.of(s));
-    Decl decl = new Decl(null, null, null, names, ownerSig.oneOf());
+    Expr fnc_inversefnc_or_bijection = bijectionFiltered.call(func.call(), fromExpr, toExpr);
+    if (justFunction) { // to == null so toExpr = varX
+      if (func == Alloy.sources) { // {fact {all x: B | isBeforeTarget[x.transferBB1]}
+        this.addToOverallFact(isBeforeTarget.call(fromExpr).forAll(decl));
+        factsAdded.add(isBeforeTarget.call(fromExpr));
+      } else if (func == Alloy.targets) {// fact {all x: B | isAfterSource[x.transferB2B]}
+        this.addToOverallFact(isAfterSource.call(fromExpr).forAll(decl));
+        factsAdded.add(isAfterSource.call(fromExpr));
+      }
+    }
     this.addToOverallFact(fnc_inversefnc_or_bijection.forAll(decl));
+    factsAdded.add(fnc_inversefnc_or_bijection);
+
+    return factsAdded;
   }
 
+
+
   /**
-   * Example: all s: FoodService | bijectionFiltered[happensBefore, s.order, s.serve]
+   * Creates the bijection filtered happens before and add to overall fact.
    *
-   * @param var = s
-   * @param ownerSig = FoodService
-   * @param from = order
-   * @param to = serve
+   * @param ownerSig the owner sig
+   * @param from the from
+   * @param to the to
    */
-  public void createBijectionFilteredHappensBeforeAndAddToOverallFact(
-      ExprVar var, Sig ownerSig, Expr from, Expr to) {
+  public void createBijectionFilteredHappensBeforeAndAddToOverallFact(ExprVar varX, Sig ownerSig,
+      Expr from, Expr to) {
 
     Expr bijectionFilteredExpr =
-        bijectionFiltered.call(happensBefore.call(), var.join(from), var.join(to));
-
-    Decl decl = new Decl(null, null, null, List.of(var), ownerSig.oneOf());
+        bijectionFiltered.call(happensBefore.call(), varX.join(from), varX.join(to));
+    Decl decl = makeDecl(varX, ownerSig);
     this.addToOverallFact(bijectionFilteredExpr.forAll(decl));
   }
 
   /**
-   * Returns nonZeroDurationOnly and suppressTransfers and suppressIO.
-   *
+   * Returns nonZeroDurationOnly and suppressTransfers and suppressIO
+   * 
    * @return nonZeroDurationOnly and suppressTransfers and suppressIO
    */
   public Expr getCommonCmdExprs() {
@@ -664,18 +478,8 @@ public class Alloy {
     Func suppressIOFunction = new Func(null, "suppressIO", null, null, suppressIOExpressionBody);
     Expr suppressIOExpression = suppressIOFunction.call();
 
-    return nonZeroDurationOnlyFunctionExpression
-        .and(suppressTransfersExpression)
+    return nonZeroDurationOnlyFunctionExpression.and(suppressTransfersExpression)
         .and(suppressIOExpression);
-  }
-
-  /**
-   * Adds the to name expr.
-   *
-   * @param expr the expr
-   */
-  public void addToNameExpr(Expr expr) {
-    _nameExpr = _nameExpr.and(expr);
   }
 
   /**
@@ -686,11 +490,9 @@ public class Alloy {
    * @param num the num
    */
   public void addCardinalityEqualConstraintToField(Sig ownerSig, Sig.Field field, int num) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
-    List<ExprHasName> names = new ArrayList<>(List.of(s));
-    Decl decl = new Decl(null, null, null, names, ownerSig.oneOf());
-    this.addToOverallFact(
-        s.join(field).cardinality().equal(ExprConstant.makeNUMBER(num)).forAll(decl));
+    ExprVar varX = makeVarX(ownerSig);
+    this.addToOverallFact(varX.join(field).cardinality().equal(ExprConstant.makeNUMBER(num))
+        .forAll(makeDecl(varX, ownerSig)));
   }
 
   /**
@@ -700,13 +502,11 @@ public class Alloy {
    * @param field the field
    * @param num the num
    */
-  public void addCardinalityGreaterThanEqualConstraintToField(
-      Sig ownerSig, Sig.Field field, int num) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
-    List<ExprHasName> names = new ArrayList<>(List.of(s));
-    Decl decl = new Decl(null, null, null, names, ownerSig.oneOf());
-    this.addToOverallFact(
-        s.join(field).cardinality().gte(ExprConstant.makeNUMBER(num)).forAll(decl));
+  public void addCardinalityGreaterThanEqualConstraintToField(Sig ownerSig, Sig.Field field,
+      int num) {
+    ExprVar varX = makeVarX(ownerSig);
+    this.addToOverallFact(varX.join(field).cardinality().gte(ExprConstant.makeNUMBER(num))
+        .forAll(makeDecl(varX, ownerSig)));
   }
 
   /**
@@ -716,12 +516,54 @@ public class Alloy {
    * @param field1 the field 1
    * @param field2 the field 2
    */
-  // fact {all x: B1 | x.vin=x.vout}
+  // fact {all x: B1 | x.vin = x.vout}
   public void addEqual(Sig ownerSig, Sig.Field field1, Sig.Field field2) {
-    ExprVar s = ExprVar.make(null, "x", ownerSig.type());
-    List<ExprHasName> names = new ArrayList<>(List.of(s));
-    Decl decl = new Decl(null, null, null, names, ownerSig.oneOf());
-    this.addToOverallFact(s.join(field1).equal(s.join(field2)).forAll(decl));
+    ExprVar varX = makeVarX(ownerSig);
+    this.addToOverallFact(
+        varX.join(field1).equal(varX.join(field2)).forAll(makeDecl(varX, ownerSig)));
+  }
+
+  // fact {all x: B1 | x.vin = x.inputs}
+  // change to {all x: B1 | x.vin in x.inputs}
+  public void addEqual2(PrimSig ownerSig, List<Sig.Field> sortedFields, Func func) {
+    ExprVar varX = makeVarX(ownerSig);
+    Decl decl = makeDecl(varX, ownerSig);
+    Expr fieldsExpr = null;
+    for (Field field : sortedFields) {
+      // sig.domain(field) or sig.parent.domain(sig.parent.field)
+      Expr sigDomainField = AlloyUtils.getSigDomainFileld(field.label, ownerSig);
+      if (sigDomainField != null)
+        fieldsExpr = fieldsExpr == null ? varX.join(sigDomainField)
+            : fieldsExpr.plus(varX.join(sigDomainField));
+    }
+
+    // .... in x.inputs
+    Expr equalExpr = fieldsExpr.in(varX.join(func.call()));
+    addToOverallFact(equalExpr.forAll(decl));
+
+    // x.inputs in ....
+    Expr equalExprclosure = (varX.join(func.call())).in(fieldsExpr);
+    addToOverallFact(equalExprclosure.forAll(decl));
+  }
+
+  // fact {all x: OFSingleFoodService | x.prepare.inputs in x.prepare.preparedFoodItem +
+  // x.prepare.prepareDestination}
+  public void createInOutClosure(PrimSig ownerSig, Field fieldOwner, List<Sig.Field> fieldOfFields,
+      Func inOrOut) {
+    ExprVar varX = makeVarX(ownerSig);
+    Decl decl = makeDecl(varX, ownerSig);
+    Expr fieldsExpr = null;
+    for (Field field : fieldOfFields) {
+      // sig.domain(field) or sig.parent.domain(sig.parent.field)
+      // Expr sigDomainField = AlloyUtils.getSigDomainFileld(field.label, ownerSig);
+      // if (sigDomainField != null)
+      fieldsExpr = fieldsExpr == null ? varX.join(fieldOwner).join(field)
+          : fieldsExpr.plus(varX.join(fieldOwner).join(field));
+    }
+    // x.inputs in ....
+    Expr equalExprclosure = (varX.join(fieldOwner).join(inOrOut.call())).in(fieldsExpr);
+    addToOverallFact(equalExprclosure.forAll(decl));
+
   }
 
   /**
@@ -732,122 +574,118 @@ public class Alloy {
    * @param field the field
    */
   public void addOneConstraintToField(ExprVar var, Sig ownerSig, Sig.Field field) {
-    Decl decl = new Decl(null, null, null, List.of(var), ownerSig.oneOf());
+    Decl decl = makeDecl(var, ownerSig);
     this.addToOverallFact(
         var.join(field).cardinality().equal(ExprConstant.makeNUMBER(1)).forAll(decl));
   }
 
-  /**
-   * No inputs.
-   *
-   * @param sig the sig
-   */
-  public void noInputs(Sig sig) {
-    ExprVar var = ExprVar.make(null, "x", sig.type());
-    Decl decl = new Decl(null, null, null, List.of(var), sig.oneOf());
-    addToOverallFact((var.join(oinputs.call()).no()).forAll(decl));
+  // fact {all x: Integer | no steps.x}
+  public void noStepsX(Sig sig) {
+    ExprVar var = makeVarX(sig);
+    Decl decl = makeDecl(var, sig);
+    addToOverallFact(osteps.call().join(var).no().forAll(decl));
   }
 
-  /**
-   * No outputs.
-   *
-   * @param sig the sig
-   */
-  public void noOutputs(Sig sig) {
-    ExprVar var = ExprVar.make(null, "x", sig.type());
-    Decl decl = new Decl(null, null, null, List.of(var), sig.oneOf());
-    addToOverallFact((var.join(ooutputs.call()).no()).forAll(decl));
+  // fact {all x: Integer | no x.steps}
+  public void noXSteps(Sig sig) {
+    ExprVar var = makeVarX(sig);
+    Decl decl = makeDecl(var, sig);
+    addToOverallFact((var.join(osteps.call()).no()).forAll(decl));
   }
 
-  /**
-   * Adds the inputs.
-   *
-   * @param var the var
-   * @param ownerSig the owner sig
-   * @param field the field
-   */
-  public void addInputs(ExprVar var, Sig ownerSig, Field field) {
-    Decl decl = new Decl(null, null, null, List.of(var), ownerSig.oneOf());
-    Expr expr = var.join(ownerSig.domain(field));
-    if (expr != null) {
-      // addToOverallFact((expr).in(var.join(oinputsExpr1)).forAll(decl));
-      // addToOverallFact(var.join(oinputsExpr2).in(expr).forAll(decl));
-      addBothToOverallFact(var, expr, oinputs.call(), decl);
-    }
+
+
+  // all x | no inputs.x or // {all x| no outputs.x}
+  public void noInputsOrOutputsX(Sig sig, Func inputsOrOutpus) {
+    ExprVar var = makeVarX(sig);
+    Decl decl = makeDecl(var, sig);
+    addToOverallFact((inputsOrOutpus.call().join(var).no()).forAll(decl));
   }
 
-  /**
-   * Adds the outputs.
-   *
-   * @param var the var
-   * @param ownerSig the owner sig
-   * @param field the field
-   */
-  public void addOutputs(ExprVar var, Sig ownerSig, Field field) {
-    // Expr ooutExpr1 = ooutputs.call();
-    // Expr oinputsExpr2 = ooutputs.call();
 
-    Decl decl = new Decl(null, null, null, List.of(var), ownerSig.oneOf());
-    Expr expr = var.join(ownerSig.domain(field));
-    if (expr != null) {
-      // addToOverallFact((expr).in(var.join(oinputsExpr1)).forAll(decl));
-      // addToOverallFact(var.join(oinputsExpr2).in(expr).forAll(decl));
-      addBothToOverallFact(var, expr, ooutputs.call(), decl);
-    }
+  // (all x | no x.inputs) // (all x | no x.outputs)
+  public void noXInputsOrOutputs(Sig sig, Func inputsOrOutputs) {
+    ExprVar var = makeVarX(sig);
+    Decl decl = makeDecl(var, sig);
+    addToOverallFact((var.join(inputsOrOutputs.call()).no()).forAll(decl));
   }
 
-  /**
-   * Adds the both to overall fact.
-   *
-   * @param var the var
-   * @param expr the expr
-   * @param varJoinExpr the var join expr
-   * @param decl the decl
-   */
-  private void addBothToOverallFact(ExprVar var, Expr expr, Expr varJoinExpr, Decl decl) {
-    addToOverallFact((expr).in(var.join(varJoinExpr)).forAll(decl));
-    addToOverallFact(var.join(varJoinExpr).in(expr).forAll(decl));
+  // no inputs.x
+  // no x.inputs
+  // no x.outputs
+  // no outputs.x
+  public void noInputsXAndXInputsOrOutputsXAndXOutputs(Sig sig, Func inputsOrOutputs) {
+    ExprVar var = makeVarX(sig);
+    Decl decl = makeDecl(var, sig);
+    addToOverallFact((inputsOrOutputs.call().join(var).no()).forAll(decl));
+    addToOverallFact((var.join(inputsOrOutputs.call()).no()).forAll(decl));
   }
 
-  // public void addSteps(ExprVar var, Sig ownerSig) {
-  //
-  // // ?? do you need different call?
-  // // steps
-  // Expr ostepsExpr1 = osteps.call();
-  // // Expr ostepsExpr2 = osteps.call();
-  //
-  // Decl decl = new Decl(null, null, null, List.of(var), ownerSig.oneOf());
-  // Expr expr = createStepExpr(var, ownerSig);
-  // if (expr != null) {
-  // // addToOverallFact((expr).in(var.join(ostepsExpr1)).forAll(decl));
-  // // addToOverallFact(var.join(ostepsExpr2).in(expr).forAll(decl));
-  // addBothToOverallFact(var, expr, ostepsExpr1, decl);
-  // }
-  // }
-  //
-  // private Expr createStepExpr(ExprVar s, Sig ownerSig) {
-  //
-  // List<String> sortedFieldLabel = new ArrayList<>();
-  // for (Field field : ownerSig.getFields()) {
-  // sortedFieldLabel.add(field.label);
-  // }
-  // Collections.sort(sortedFieldLabel);
-  //
-  // Expr expr = null;
-  //
-  // for (String fieldName : sortedFieldLabel) {
-  // for (Field field : ownerSig.getFields()) {
-  // if (field.label.equals(fieldName)) {
-  // expr = expr == null ? s.join(ownerSig.domain(field))
-  // : expr.plus(s.join(ownerSig.domain(field)));
-  // break;
-  // }
-  // }
-  // }
-  //
-  //
-  // return expr;
-  // }
+
+
+  public void noItemsX(Sig sig) {
+    ExprVar var = makeVarX(sig);
+    Decl decl = makeDecl(var, sig);
+    addToOverallFact((oitems.call().join(var).no()).forAll(decl)); // no item.x
+  }
+
+
+
+  public void createNoInputsOrOutputsField(Sig sig, Field field, Func inputsOrOutputs) {
+    ExprVar varX = makeVarX(sig);
+    Decl declX = makeDecl(varX, sig);// x: MultipleObjectFlow
+    Expr exprField = varX.join(sig.domain(field)); // x.p4
+    addToOverallFact((exprField.join(inputsOrOutputs.call())/* x.p4.outputs */.no()).forAll(declX));
+  }
+
+
+  // fact {all x: MultipleObjectFlow | all p: x.p2 | p.i = p.inputs}
+  // or
+  // fact {all x: MultipleObjectFlow | all p: x.p1 | p.i = p.outputs}
+  public void createEqualFieldToOverallFact(Sig sig, Expr from, Sig.Field fromField, Expr to,
+      Sig.Field toField, Func func) {
+
+    // all x: MultipleObjectFlow
+    ExprVar varX = makeVarX(sig);
+    Decl declX = makeDecl(varX, sig);
+
+    // all p: x.p1
+    ExprVar varP = ExprVar.make(null, "p", from.type()); // p
+    Expr exprField = varX.join(sig.domain(fromField)); // x.p1
+    Decl declY = new Decl(null, null, null, List.of(varP), exprField);
+
+    // p.i = p.outputs (func = outputs) to p.i in p.outputs
+    Expr equalExpr = varP.join(toField).in(varP.join(func.call()));
+    // and p.outputs in p.i
+    Expr equqlExpr2 = varP.join(func.call()).in(varP.join(toField));
+
+    // fact {all x: MultipleObjectFlow | all p: x.p1 | p.i = p.outputs}
+    // to
+    // fact {all x: MultipleObjectFlow | all p: x.p1 | p.i in p.outputs}
+    // fact {all x: MultipleObjectFlow | all p: x.p1 | p.outpus in p.i}
+    addToOverallFact(equalExpr.forAll(declY).forAll(declX));
+    addToOverallFact(equqlExpr2.forAll(declY).forAll(declX));
+  }
+
+
+
+  /**
+   * Add expression like ... fact {all x: SimpleSequence | no y: Transfer | y in x.steps}
+   * 
+   * @param sig
+   */
+  public void noTransferStep(Sig sig) {
+    ExprVar varX = makeVarX(sig);
+    Decl declX = makeDecl(varX, sig);
+
+    ExprVar varY = ExprVar.make(null, "y", transferSig.type());
+    Decl declY = new Decl(null, null, null, List.of(varY), transferSig.oneOf());
+
+    Expr ostepsExpr1 = osteps.call();
+    addToOverallFact((varY).in(varX.join(ostepsExpr1)). /* y in x.steps */forNo(declY)
+        ./* no y: Transfer */ forAll(declX))/* all x: SimpleSequence */;
+
+  }
 
   /**
    * Adds the steps.
@@ -855,137 +693,59 @@ public class Alloy {
    * @param sig the sig
    * @param stepFields the step fields
    */
-  public void addSteps(Sig sig, Set<String> stepFields) {
-    ExprVar s = ExprVar.make(null, "x", sig.type());
+  public void addSteps(PrimSig sig, Set<String> stepFields, boolean addInXSteps,
+      boolean addXStepsIn) {
+    ExprVar varX = makeVarX(sig);
+    Decl decl = makeDecl(varX, sig);
     Expr ostepsExpr1 = osteps.call();
-    Decl decl = new Decl(null, null, null, List.of(s), sig.oneOf());
 
     List<String> sortedFieldLabel = new ArrayList<>();
-    for (String stepField : stepFields) sortedFieldLabel.add(stepField);
+    for (String stepField : stepFields)
+      sortedFieldLabel.add(stepField);
     Collections.sort(sortedFieldLabel);
 
-    Expr expr = null;
-    for (String fieldName : sortedFieldLabel) {
-      for (Field field : sig.getFields()) {
-        if (field.label.equals(fieldName)) {
-          expr = expr == null ? s.join(sig.domain(field)) : expr.plus(s.join(sig.domain(field)));
-          break;
+
+    if (addXStepsIn) {// to only leaf sig - all fields including inherited/redefined
+      Expr expr = null;
+      for (String fieldName : sortedFieldLabel) {
+        // sig.domain(field) or sig.parent.domain(sig.parent.field)
+        Expr sigDomainField = AlloyUtils.getSigDomainFileld(fieldName, sig); // including inherited
+                                                                             // fields
+        if (sigDomainField != null)
+          expr = expr == null ? varX.join(sigDomainField) : expr.plus(varX.join(sigDomainField));
+      }
+      if (expr != null)
+        addToOverallFact(varX.join(ostepsExpr1).in(expr).forAll(decl)); // x.steps in .....
+    }
+
+    if (addInXSteps) {// for all sigs - own fields - not include redefined
+      Expr expr = null;
+      for (String fieldName : sortedFieldLabel) {
+        Expr sigDomainField = AlloyUtils.getSigOwnField(fieldName, sig);
+        if (sigDomainField != null) {
+          expr = expr == null ? varX.join(sigDomainField) : expr.plus(varX.join(sigDomainField));
         }
       }
-    }
-    if (expr != null) {
-      addBothToOverallFact(s, expr, ostepsExpr1, decl);
+      if (expr != null)
+        addToOverallFact((expr).in(varX.join(ostepsExpr1)).forAll(decl)); // .... in x.steps
     }
   }
 
-  /**
-   * Creates the command.
-   *
-   * @param label the label
-   * @param __overall the overall
-   * @return the command
-   */
-  public Command createCommand(String label, int __overall) {
-    Pos _pos = null;
-    String _label = label;
-    boolean _check = false;
-    int _overall = __overall;
-    int _bitwidth = -1;
-    int _maxseq = -1;
-    int _expects = -1;
-    Iterable<CommandScope> _scope = Arrays.asList(new CommandScope[] {});
-    Iterable<Sig> _additionalExactSig = Arrays.asList(new Sig[] {});
-    Expr _formula = getOverAllFact(); // _nameExpr.and(getOverAllFact());
-    Command _parent = null;
-
-    // ========== Define command ==========
-
-    Command command =
-        new Command(
-            _pos,
-            _nameExpr,
-            _label,
-            _check,
-            _overall,
-            _bitwidth,
-            _maxseq,
-            _expects,
-            _scope,
-            _additionalExactSig,
-            _formula,
-            _parent);
-    return command;
+  // fact {all x: OFFoodService | x.eat in OFEat }
+  // sig = OFFoodService, field eat, typeSig = OFEat
+  public void addRedefinedSubsettingAsFact(Sig sig, Field field, Sig typeSig) {
+    ExprVar varX = makeVarX(sig);
+    Decl decl = makeDecl(varX, sig);
+    addToOverallFact(varX.join(field).in(typeSig).forAll(decl));
   }
 
-  /*
-   * private Map<Sig, List<Field>> toFieldsByFieldType(Map<Field, Sig> fieldByFieldType) { Map<Sig,
-   * List<Field>> fieldsByFieldType = new HashMap<>(); for (Sig.Field field :
-   * fieldByFieldType.keySet()) { Sig type = fieldByFieldType.get(field); List<Field> fields = null;
-   * if (fieldsByFieldType.containsKey(type)) { fields = fieldsByFieldType.get(type); } else {
-   * fields = new ArrayList<>(); fieldsByFieldType.put(type, fields); } fields.add(field); } return
-   * fieldsByFieldType;
-   *
-   * }
-   *
-   *
-   * public void addConstraint(Sig ownerSig, Map<Field, Sig> fieldByFieldType) {
-   *
-   * Map<Sig, List<Field>> fieldsByFieldType = toFieldsByFieldType(fieldByFieldType); Expr
-   * duringExampleExpressions = null; for (Sig type : fieldsByFieldType.keySet()) { String
-   * labelPrefix = ""; Expr body = null; for (Field field : fieldsByFieldType.get(type)) { if
-   * (field.sig == ownerSig) { body = body == null ? ownerSig.join(field) :
-   * body.plus(ownerSig.join(field)); labelPrefix += field.label; } } if (body != null) { Expr
-   * pDuringExampleBody = type.in(body); String label = labelPrefix + "DuringExample"; //
-   * p1DuringExample Pos pos = null; List<Decl> decls = new ArrayList<>(); Expr returnDecl = null;
-   * Func duringExamplePredicate = new Func(pos, label, decls, returnDecl, pDuringExampleBody); Expr
-   * duringExampleExpression = duringExamplePredicate.call(); duringExampleExpressions =
-   * duringExampleExpressions == null ? duringExampleExpression :
-   * duringExampleExpressions.and(duringExampleExpression); } } if (duringExampleExpressions !=
-   * null) { Func instancesDuringExamplePredicate = new Func(null, "instancesDuringExample", new
-   * ArrayList<>(), null, duringExampleExpressions); Expr instancesDuringExampleExpression =
-   * instancesDuringExamplePredicate.call(); addToNameExpr(instancesDuringExampleExpression); }
-   *
-   * }
-   *
-   * public void addOnlyConstraint(Sig sig) { Func onlySimpleSequencePredicate = new Func(null,
-   * "only" + sig.label, new ArrayList<>(), null,
-   * sig.cardinality().equal(ExprConstant.makeNUMBER(1))); Expr onlySimpleSequenceExpression =
-   * onlySimpleSequencePredicate.call(); addToNameExpr(onlySimpleSequenceExpression); }
-   *
-   * public void addConstraintzz(Sig ownerSig, Map<String, Field> fieldByName, Map<String, Sig>
-   * fieldTypeByFieldName) {
-   *
-   * // During Pos pos = null; Expr duringExampleExpressions = null; String label =
-   * "pDuringExample"; // p1DuringExample Expr body = null; String commonFieldName = ""; for (String
-   * fieldName : fieldByName.keySet()) { commonFieldName = fieldName; Sig.Field field =
-   * fieldByName.get(fieldName); body = body == null ? ownerSig.join(field) :
-   * body.plus(ownerSig.join(field)); } // assuming all fieldTypeByFieldName.get(fieldName) are the
-   * same Expr pDuringExampleBody = fieldTypeByFieldName.get(commonFieldName).in(body); List<Decl>
-   * decls = new ArrayList<>(); Expr returnDecl = null; Func duringExamplePredicate = new Func(pos,
-   * label, decls, returnDecl, pDuringExampleBody); Expr duringExampleExpression =
-   * duringExamplePredicate.call(); duringExampleExpressions = duringExampleExpressions == null ?
-   * duringExampleExpression : duringExampleExpressions.and(duringExampleExpression);
-   *
-   *
-   *
-   * Func instancesDuringExamplePredicate = new Func(null, "instancesDuringExample", new
-   * ArrayList<>(), null, duringExampleExpressions); Expr instancesDuringExampleExpression =
-   * instancesDuringExamplePredicate.call();
-   *
-   * Func onlySimpleSequencePredicate = new Func(null, "only" + ownerSig.label, new ArrayList<>(),
-   * null, ownerSig.cardinality().equal(ExprConstant.makeNUMBER(1))); Expr
-   * onlySimpleSequenceExpression = onlySimpleSequencePredicate.call();
-   *
-   * addToNameExpr(instancesDuringExampleExpression); addToNameExpr(onlySimpleSequenceExpression); }
-   */
+  private static ExprVar makeVarX(Sig sig) {
+    return ExprVar.make(null, "x", sig.type());
+  }
 
-  /*
-   * public Command createRunCommand(String label, int overall) { Pos pos = null; boolean check =
-   * false; int bitwidth = -1; int maxseq = -1; int expects = -1; Iterable<CommandScope> scope =
-   * Arrays.asList(new CommandScope[] {}); Iterable<Sig> additionalExactSig = Arrays.asList(new
-   * Sig[] {}); Expr formula = _nameExpr.and(getOverAllFact()); Command parent = null; return new
-   * Command(pos, _nameExpr, label, check, overall, bitwidth, maxseq, expects, scope,
-   * additionalExactSig, formula, parent); }
-   */
-
+  private static Decl makeDecl(ExprVar x, Sig sig) {
+    return new Decl(null, null, null, List.of(x), sig.oneOf());
+  }
 }
+
+
